[project]
name = "token-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "dotenv>=0.9.9",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "tiktoken>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]  # Ignore line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["token_counter"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
